// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builder concerns renders progress note popup with templates renders progress note 1`] = `
<div
  className="container visible"
>
  <div
    className="topBar"
  >
    <div
      className="topBarLabel"
    >
      Progress Note: 
      Progress Note Template Title
    </div>
    <div
      className="closeButton"
      onClick={[MockFunction]}
    />
  </div>
  <div
    className="middleBar"
  >
    <Link
      className="patientContainer"
      replace={false}
      to="/patients/patient-id"
    >
      <div
        className="patientPhoto"
        style={
          Object {
            "backgroundImage": "url('https://bit.ly/2Exqf9z')",
          }
        }
      />
      <div
        className="patientContainerRight"
      >
        <div
          className="patientName"
        >
          Bob Smith
        </div>
        <FormattedRelative
          updateInterval={10000}
          value="2017-09-07T13:45:14.532Z"
        >
          [Function]
        </FormattedRelative>
      </div>
    </Link>
    <Button
      color="blue"
      disabled={true}
      messageId="patient.submitProgressNote"
      onClick={[Function]}
    />
  </div>
  <UnderlineTabs>
    <UnderlineTab
      messageId="patient.context"
      onClick={[Function]}
      selected={true}
    />
    <UnderlineTab
      messageId="patient.activity"
      onClick={[Function]}
      selected={false}
    />
  </UnderlineTabs>
  <div
    className="bottomSection"
  >
    <Connect(Apollo(Apollo(Apollo(Apollo(ProgressNoteContext)))))
      onChange={[Function]}
      patientId="patient-id"
      progressNote={
        Object {
          "completedAt": null,
          "createdAt": "2017-09-07T13:45:14.532Z",
          "deletedAt": null,
          "id": "progress-note-id",
          "location": null,
          "memberConcern": "member concern",
          "needsSupervisorReview": null,
          "patient": Object {
            "consentToCall": true,
            "consentToText": true,
            "createdAt": "2017-09-07T13:45:14.532Z",
            "dateOfBirth": "01/01/1999",
            "firstName": "Bob",
            "gender": "male",
            "homeClinicId": "clinic-id",
            "id": "patient-id",
            "language": "en",
            "lastName": "Smith",
            "middleName": null,
            "scratchPad": "Note",
            "zip": "05431",
          },
          "patientId": "patient-id",
          "progressNoteTemplate": Object {
            "createdAt": "2017-09-07T13:45:14.532Z",
            "deletedAt": null,
            "id": "progress-note-template-id",
            "title": "Progress Note Template Title",
            "updatedAt": "2017-09-07T13:45:14.532Z",
          },
          "progressNoteTemplateId": "progress-note-template-id",
          "reviewedBySupervisorAt": null,
          "startedAt": null,
          "summary": "summary!",
          "supervisor": null,
          "supervisorId": null,
          "supervisorNotes": null,
          "updatedAt": "2017-09-07T13:45:14.532Z",
          "user": Object {
            "createdAt": "2017-09-07T13:45:14.532Z",
            "email": "a@b.com",
            "firstName": "first",
            "googleProfileImageUrl": null,
            "homeClinicId": "clinic-id",
            "id": "id",
            "lastName": "last",
            "locale": "en",
            "phone": "(212) 555-8394",
            "updatedAt": "2017-09-07T13:45:14.532Z",
            "userRole": "physician",
          },
        }
      }
      progressNoteTemplates={
        Array [
          Object {
            "createdAt": "2017-09-07T13:45:14.532Z",
            "deletedAt": null,
            "id": "progress-note-template-id",
            "title": "Progress Note Template Title",
            "updatedAt": "2017-09-07T13:45:14.532Z",
          },
        ]
      }
      updateReadyToSubmit={[Function]}
    />
    <Apollo(Apollo(ProgressNoteCosignature))
      patientId="patient-id"
      progressNote={
        Object {
          "completedAt": null,
          "createdAt": "2017-09-07T13:45:14.532Z",
          "deletedAt": null,
          "id": "progress-note-id",
          "location": null,
          "memberConcern": "member concern",
          "needsSupervisorReview": null,
          "patient": Object {
            "consentToCall": true,
            "consentToText": true,
            "createdAt": "2017-09-07T13:45:14.532Z",
            "dateOfBirth": "01/01/1999",
            "firstName": "Bob",
            "gender": "male",
            "homeClinicId": "clinic-id",
            "id": "patient-id",
            "language": "en",
            "lastName": "Smith",
            "middleName": null,
            "scratchPad": "Note",
            "zip": "05431",
          },
          "patientId": "patient-id",
          "progressNoteTemplate": Object {
            "createdAt": "2017-09-07T13:45:14.532Z",
            "deletedAt": null,
            "id": "progress-note-template-id",
            "title": "Progress Note Template Title",
            "updatedAt": "2017-09-07T13:45:14.532Z",
          },
          "progressNoteTemplateId": "progress-note-template-id",
          "reviewedBySupervisorAt": null,
          "startedAt": null,
          "summary": "summary!",
          "supervisor": null,
          "supervisorId": null,
          "supervisorNotes": null,
          "updatedAt": "2017-09-07T13:45:14.532Z",
          "user": Object {
            "createdAt": "2017-09-07T13:45:14.532Z",
            "email": "a@b.com",
            "firstName": "first",
            "googleProfileImageUrl": null,
            "homeClinicId": "clinic-id",
            "id": "id",
            "lastName": "last",
            "locale": "en",
            "phone": "(212) 555-8394",
            "updatedAt": "2017-09-07T13:45:14.532Z",
            "userRole": "physician",
          },
        }
      }
      updateProgressNote={[Function]}
    />
  </div>
</div>
`;

exports[`builder concerns renders progress note popup with templates renders progress note popup with templates 1`] = `
<div
  className="container visible"
>
  <div
    className="topBar"
  >
    <div
      className="topBarLabel"
    >
      Progress Note: 
    </div>
    <div
      className="closeButton"
      onClick={[MockFunction]}
    />
  </div>
  <div
    className="middleBar"
  >
    <Link
      className="patientContainer"
      replace={false}
      to="/patients/patient-id"
    >
      <div
        className="patientPhoto"
        style={
          Object {
            "backgroundImage": "url('https://bit.ly/2Exqf9z')",
          }
        }
      />
      <div
        className="patientContainerRight"
      >
        <div
          className="patientName"
        >
          Unknown
        </div>
      </div>
    </Link>
    <Button
      color="blue"
      disabled={true}
      messageId="patient.submitProgressNote"
      onClick={[Function]}
    />
  </div>
  <UnderlineTabs>
    <UnderlineTab
      messageId="patient.context"
      onClick={[Function]}
      selected={true}
    />
    <UnderlineTab
      messageId="patient.activity"
      onClick={[Function]}
      selected={false}
    />
  </UnderlineTabs>
  <div
    className="bottomSection"
  >
    <Connect(Apollo(Apollo(Apollo(Apollo(ProgressNoteContext)))))
      onChange={[Function]}
      patientId="patient-id"
      progressNote={undefined}
      progressNoteTemplates={
        Array [
          Object {
            "createdAt": "2017-09-07T13:45:14.532Z",
            "deletedAt": null,
            "id": "progress-note-template-id",
            "title": "Progress Note Template Title",
            "updatedAt": "2017-09-07T13:45:14.532Z",
          },
        ]
      }
      updateReadyToSubmit={[Function]}
    />
  </div>
</div>
`;
